# flow

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.properties
data/flowlang/: meta.json
data/flowlang/asse/ts__/____/____/: assets
data/flowlang/cont/rols/____/____/: controls
data/flowlang/orpm/th18/35d7/95a5/: orpmth1835d795a53tc
data/flowlang/task/list/s___/____/: tasklists
data/flowlang/ulky/ir18/0dd5/a0d7/: ulkyir180dd5a0d77p18 (copy).flow
data/flowlang/vlpm/xr18/25a3/76b7/: vlpmxr1825a376b79uf
data/flowlang/vnvv/hj18/35d7/95a5/: vnvvhj1835d795a5ftd
data/flowlang/xrnr/jm18/35d7/9671/: xrnrjm1835d79671eye  xrnrjm1835d79671eye.rs
data/mcp/: meta.json
data/mcp/_APPS/mcp/: app.properties
data/mcp/_APPS/mcp/src/html/mcp/: index.html  index.js
data/mcp/cont/rols/____/____/: controls
data/mcp/task/list/s___/____/: tasklists
data/testflow/: meta.json
data/testflow/asse/ts__/____/____/: assets
data/testflow/cont/rols/____/____/: controls
data/testflow/task/list/s___/____/: tasklists
libflowlang/: Cargo.toml
libflowlang/src/: lib.rs
prototypes/bytes/: bytesutil.rs  code.rs  heap.rs  main.rs  primitives.rs
prototypes/index-map/: heap.rs
prototypes/lazy2/: command.rs  dataarray.rs  dataobject.rs  datastore.rs  main.rs
prototypes/lifetime/: code.rs  command.rs  data.rs  dataarray.rs  dataobject.rs  datastore.rs  flowenv.rs  main.rs  primitives.rs
prototypes/main_owned/: code.rs  command.rs  data.rs  dataarray.rs  dataobject.rs  datastore.rs  flowenv.rs  main.rs  primitives.rs
prototypes/main_owned3/: code.rs  data.rs  dataarray.rs  dataobject.rs  heap.rs  main.rs  primitives.rs
prototypes/no_hashmap/: heap.rs
prototypes/refcell/: data.rs  dataobject.rs  main.rs
prototypes/state/: data.rs  dataarray.rs  dataobject.rs  flowenv.rs  heap.rs  main.rs
prototypes/unsafe/: dataarray.rs  dataobject.rs  main.rs
prototypes/unsafe2/: data.rs  dataobject.rs  datastore.rs  flowenv.rs  heap.rs  main.rs
src/: appserver.rs  base64.rs  build.rs  buildrust.rs  bytesref.rs  bytesutil.rs  case.rs  cmdinit.rs  code.rs  command.rs  data.rs  dataarray.rs  dataobject.rs  dataproperty.rs  datastore.rs  flowenv.rs  flowmcp.rs  heap.rs  javacmd.rs  jscmd.rs  lib.rs  main.rs  primitives.rs  pycmd.rs  pyenv.rs  pywrapper.rs  rand.rs  rfc2822date.rs  rustcmd.rs  sha1.rs  usizemap.rs  x25519.rs
src/flowlang/: mod.rs
src/flowlang/data/: exists.rs  library_exists.rs  library_new.rs  mod.rs  read.rs  root.rs  write.rs
src/flowlang/file/: copy_dir.rs  exists.rs  is_dir.rs  list.rs  mime_type.rs  mod.rs  read_all_string.rs  read_properties.rs  visit.rs  write_properties.rs
src/flowlang/http/: cast_params.rs  hex_decode.rs  hex_encode.rs  listen.rs  mod.rs  websocket.rs  websocket_read.rs  websocket_write.rs
src/flowlang/math/: greater_than.rs  less_than.rs  minus.rs  mod.rs  multiply.rs  or.rs  plus.rs
src/flowlang/object/: array_from_json.rs  equals.rs  get.rs  has.rs  index_of.rs  keys.rs  mod.rs  object_from_json.rs  push.rs  push_all.rs  set.rs  to_json.rs
src/flowlang/string/: ends_with.rs  left.rs  length.rs  mod.rs  right.rs  split.rs  starts_with.rs  substring.rs  trim.rs
src/flowlang/system/: execute_command.rs  execute_id.rs  mod.rs  random_non_hex_char.rs  sleep.rs  stdout.rs  system_call.rs  thread.rs  thread_id.rs  time.rs  unique_session_id.rs
src/flowlang/tcp/: accept.rs  listen.rs  mod.rs
src/flowlang/types/: is_object.rs  is_string.rs  mod.rs  to_boolean.rs  to_float.rs  to_int.rs  to_string.rs
src/mcp/: mod.rs
src/mcp/mcp/: describe.rs  initialize.rs  invoke.rs  list_prompts.rs  list_resources.rs  list_tools.rs  mcp.rs  mod.rs
src/testflow/: mod.rs
