[package]
name = "flowlang"
version = "0.1.17"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A 3D dataflow oriented programming language."
homepage = "https://github.com/mraiser/flow"
documentation = "https://docs.rs/flowlang/latest/flowlang/"
repository = "https://github.com/mraiser/flow"

[features]
serde_support = ["serde","serde_json","ndata/serde_support"]
java_runtime = ["jni"]
python_runtime = ["pyo3"]
javascript_runtime = ["deno_core","serde_v8","serde_support"]

[dependencies]
state = "0.5.3"
ndata = "0.2.3"
#ndata = { path = "../ndata" }
jni = { version = "0.19.0", features = ["invocation"], optional = true }
pyo3 = { version = "0.16.4", features = ["auto-initialize"], optional = true }
deno_core = { version = "0.145.0", optional = true }
serde_v8 = { version = "0.56.0", optional = true }
serde = { version = "1.0.143", features = ["derive"], optional = true }
serde_json = { version = "1.0.83", optional = true }

[[bin]]
name = "flow"
path = "src/main.rs"

[[bin]]
name = "flowb"
path = "src/build.rs"
