[package]
name = "flowlang"
version = "0.3.18"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A dataflow oriented programming meta-language in JSON supporting functions written in rust, python, javascript, java, and flow."
homepage = "https://github.com/mraiser/flow"
documentation = "https://docs.rs/flowlang/latest/flowlang/"
repository = "https://github.com/mraiser/flow"

[features]
serde_support = ["serde","serde_json","ndata/serde_support"]
java_runtime = ["jni"]
python_runtime = ["pyo3"]
javascript_runtime = ["deno_core","serde_v8","serde_support"]
mirror = []
python_no_singleton = []
gag = ["dep:gag"]

[dependencies]
gag = { version = "1.0", optional = true }
ndata = { version = "0.3.13" }
jni = { version = "^0.21.1", features = ["invocation"], optional = true }
pyo3 = { version = "0.20.3", features = ["auto-initialize"], optional = true }
deno_core = { version = "0.249.0", optional = true }
serde_v8 = { version = "0.158.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[[bin]]
name = "flow"
path = "src/main.rs"

[[bin]]
name = "flowb"
path = "src/build.rs"

[[bin]]
name = "flowmcp"
path = "src/flowmcp.rs"
#required-features = ["gag"]
